title spacing fix

--- a/login/resources/css/style.css
+++ b/login/resources/css/style.css
@@ -2,6 +2,9 @@
     background-image: none;
     background-color: #016871;
 }
+.login-pf-page {
+    padding-top: 0;
+}
 #kc-header {
     margin-top: 0;
 }
